# powerschool

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yml  release.yml
.trunk/: trunk.yaml
powerschool/: __init__.py  client.py  utils.py
tests/: test_powerschool.py
