[tool.poetry]
name = "powerschool"
version = "2.0.2"
description = "powerschool is a Python client for the PowerSchool API"
homepage = "https://github.com/TEAMSchools/powerschool"
repository = "https://github.com/TEAMSchools/powerschool"
license = "GPL-3.0-or-later"
readme = "README.md"
authors = ["Charlie Bini <cbini87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
oauthlib = "^3.1.0"
python-dateutil = "^2.8.1"
fiql_parser = "^0.15"
requests-oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
