[project]
name = "powerschool"
version = "4.0.1"
description = "Python client for the PowerSchool API"
authors = [
  { name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com" },
]
dependencies = [
  "requests>=2.28.1",
  "oauthlib>=3.2.2",
  "python-dateutil>=2.8.2",
  "fiql-parser>=0.15",
  "requests-oauthlib>=1.3.1",
]
requires-python = ">=3.7"
license = { text = "GPL-3.0-or-later" }

[project.urls]
homepage = "https://github.com/TEAMSchools/powerschool"
repository = "https://github.com/TEAMSchools/powerschool"

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
post_lock = { shell = "pdm export -f requirements -o requirements.txt" }
